Ensure version information is available when running interactive shell via script